infra/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: server-service
  namespace: send
spec:
  selector:
    app: server
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
